      - "% doctest: +SKIP_UNLESS(condition)"
      - "% doctest: +XFAIL_IF(condition)"
      - "% doctest: +XFAIL_UNLESS(condition)"

  * Added constants DOCTEST_OCTAVE and DOCTEST_MATLAB that can be used as
    conditions in SKIP_IF etc.

  * Improved handling of example code in TexInfo documentation.

      - Added support for @print{} macros, which may be used for output that
        is not part of a returned value.

      - Examples without ">>" markers use code indentation together with
        @result{} / @print{} macros to classify input and output lines in a
        natural way.  It is no longer necessary to split code into several
        @example / @group blocks.

      - Allow arbitrary TexInfo macros.  The documentation is interpreted
        by makeinfo before running the code examples.



doctest 0.4.0 (2015-07-02)
==========================

  * Change doctest interface to be closer to Octave's test function.

  * Change wildcard string from '***' to '...'.

  * Doctests can be influenced with directives:

      - mark tests to be skipped by appending "% doctest: +SKIP".

      - mark tests expected to fail with "% doctest: +XFAIL".

      - stricter whitespace matching: "% doctest: -NORMALIZE_WHITESPACE".

      - disable "..." wildcard matching with "% doctest: -ELLIPSIS".

  * Support "doctest foldername" to run tests on the files/classes within
    the folder/directory "foldername".  With optional recursion.

  * Improve evalc implementation on Octave.

  * Other bug fixes.



doctest 0.3.0 (2015-05-12)
==========================

  * Multiline input now works (e.g., a matrix split across lines).

  * Allow "ans = " to be omitted.

  * Pure texinfo files can be tested: "doctest myfile.texinfo".

  * Other bug fixes.

  * Support and directory structure for being an Octave package.



doctest 0.2.0 (2015-04-06)
==========================

  * Octave support, including examples in Texinfo blocks.

  * Return the number of tests and number failed.