@@ -1,13 +1,20 @@
 @example
 @group
 A = 5
-@result{} A = 5
+@result{} A =  5
 @end group
 @end example
 
 @example
 @group
 A = 6
-@result{} A = 6
+@result{} A =  6
+@end group
+@end example
+
+@example
+@group
+>> A = 7
+A =  7
 @end group
 @end example
