@@ -25,6 +25,8 @@ doctest 0.4.1-dev
       - Allow arbitrary TexInfo macros.  The documentation is interpreted
         by makeinfo before running the code examples.
 
+      - Fixed handling of TexInfo files with Windows line endings.
+
 
 
 doctest 0.4.0 (2015-07-02)
